# lungscan3d

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  infer.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: luna16.yaml  synthetic.yaml
configs/infer/: onnx.yaml
configs/logging/: default.yaml  mlflow_tensorboard.yaml
configs/loss/: bce.yaml  focal.yaml
configs/model/: dlwpt_baseline.yaml  resnet3d_se.yaml
configs/postprocess/: threshold.yaml
configs/preprocessing/: default.yaml
configs/tensorrt/: default.yaml
configs/trainer/: default.yaml
configs/triton/: default.yaml
lungscan3d/: __init__.py  commands.py
lungscan3d/data/: datamodule.py  dataset.py  download.py  preprocessing.py  splits.py
lungscan3d/inference/: __init__.py  infer.py  onnx_export.py  postprocess.py  thresholds.py  trt_export.py
lungscan3d/models/: __init__.py  baseline3d.py  blocks.py  outputs.py  resnet3d.py
lungscan3d/serving/: __init__.py  triton_client.py
lungscan3d/training/: __init__.py  callbacks.py  hard_negative_mining.py  lightning_module.py  losses.py  plots.py  train.py
lungscan3d/utils/: dvc.py  git.py  logging.py  paths.py
scripts/: export_onnx.sh  export_tensorrt.sh  run_mlflow.sh  run_tensorboard.sh  run_triton.sh  self_test.sh  smoke_train.sh
tests/: test_cli_config.py  test_datamodule_patient_split.py  test_dataset.py  test_download.py  test_hard_negative_mining.py  test_losses.py  test_model_forward.py  test_plots.py  test_preprocessing.py  test_splits.py  test_tensorrt_export.py  test_thresholds.py
triton_model_repository/lungscan3d/: config.pbtxt
