[project]
name = "lungscan3d"
version = "0.1.0"
description = "3D lung nodule classification training and inference package."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Dmitry Atamanov" }]
dependencies = [
    "dvc>=3.50.0",
    "fire>=0.6.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.8.0",
    "mlflow>=2.12.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.1.0",
    "pandas>=2.2.0",
    "pytorch-lightning>=2.2.0",
    "scikit-learn>=1.4.0",
    "simpleitk>=2.3.0",
    "tensorboard>=2.16.0",
    "torch>=2.2.0",
    "torchmetrics>=1.3.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "build>=1.2.1",
]
triton = ["tritonclient[http]>=2.44.0"]
tensorrt = ["tensorrt>=10.0.0"]
serve = ["tritonclient[http]>=2.44.0", "tensorrt>=10.0.0"]

[project.scripts]
lungscan3d = "lungscan3d.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["lungscan3d", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D", "ANN", "RUF"]
ignore = ["D100", "D104", "D203", "D213", "ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
